--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,20 +1,19 @@
 name: Rust
-
-on: [push, pull_request]
-
+on:
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
+env:
+  CARGO_TERM_COLOR: always
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up Rust
-      uses: actions/setup-rust@v1
-      with:
-        rust-version: stable
-    - name: Install dependencies
-      run: sudo apt-get install -y pkg-config libwayland-dev
-    - name: Build
-      run: |
-        export PKG_CONFIG_PATH="/usr/lib/pkgconfig"
-        cargo build --verbose
+      - uses: actions/checkout@v4
+      - name: Install dependencies
+        run: sudo apt-get install -y pkg-config libwayland-dev libasound2-dev libudev-dev libxkbcommon-x11-0 libx11-dev g++ libxkbcommon-dev
+      - name: Build
+        run: cargo build --verbose
+      - name: Run tests
+        run: cargo test --verbose
