--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,9 @@ edition = "2021"
 
 [dependencies]
 bevy = { version = "0.15.1", features = ["dynamic_linking", "wayland"] }
+bevy-inspector-egui = "0.28.1"
 bevy_rapier2d = "*"
+rand = "*"
 
 # Enable a small amount of optimization in the dev profile.
 [profile.dev]
